# QiVision

./: .gitignore  AGENTS.md  CMakeLists.txt  PROGRESS.md  README.md  README_EN.md  TROUBLESHOOTING.md  shape_model.qism
.claude/: CLAUDE.md
.claude/agents/: feature-dev.md  git-sync.md  internal-dev.md
docs/: API_Naming_Convention.md  API_Reference.md  API_Rename_Mapping.md  Halcon_API_Mapping.md  NEW_MEMBER_TASKS.md  ShapeModel_Optimization_Summary.md  ShapeModel_Performance_Benchmark.md  TROUBLESHOOTING.md
docs/design/: ShapeModel_Optimization_Notes.md
include/QiVision/: QiVision.h
include/QiVision/Blob/: Blob.h
include/QiVision/Color/: ColorConvert.h
include/QiVision/Contour/: Contour.h
include/QiVision/Core/: Constants.h  Draw.h
include/QiVision/Display/: Display.h  Draw.h
include/QiVision/Edge/: Edge.h
include/QiVision/Filter/: Filter.h
include/QiVision/GUI/: Window.h
include/QiVision/Hough/: Hough.h
include/QiVision/IO/: ImageIO.h
include/QiVision/Internal/: AnglePyramid.h  Convolution.h  Fitting.h  LinemodPyramid.h
include/QiVision/Matching/: MatchTypes.h  NCCModel.h  ShapeModel.h
include/QiVision/Measure/: Caliper.h  CaliperArray.h  MeasureTypes.h  Metrology.h
include/QiVision/Morphology/: Morphology.h
include/QiVision/Transform/: AffineTransform.h  Homography.h  PolarTransform.h
samples/: 07_shape_match_draw.cpp  08_shape_match_large.cpp  CMakeLists.txt  test_maxmatches.cpp
samples/blob/: blob_analysis.cpp
samples/calib/: polar_transform_test.cpp
samples/matching/: interactive_match.cpp  ncc_match.cpp  shape_match.cpp  test_create_model.cpp  test_scaled_match.cpp
samples/measure/: caliper_circle_manual.cpp  caliper_pairs.cpp  circle_measure.cpp  circle_metrology.cpp
shape_matching_files/: AnglePyramid.cpp  AnglePyramid.h  Gradient.cpp  Gradient.h  Interpolate.cpp  Interpolate.h  MatchTypes.h  Pyramid.cpp  Pyramid.h  ShapeModel.cpp  ShapeModel.h  ShapeModelCreate.cpp  ShapeModelImpl.h  ShapeModelScore.cpp  ShapeModelSearch.cpp  all_files.txt
src/: CMakeLists.txt
src/Blob/: Blob.cpp
src/Color/: ColorConvert.cpp
src/Contour/: Contour.cpp
src/Core/: Draw.cpp
src/Display/: Display.cpp  Draw.cpp
src/Edge/: Edge.cpp
src/Filter/: Filter.cpp
src/GUI/: Window.cpp
src/Hough/: Hough.cpp
src/IO/: ImageIO.cpp
src/Internal/: AnglePyramid.cpp  Fitting.cpp  LinemodPyramid.cpp  PolarTransform.cpp  Pyramid.cpp
src/Matching/: NCCModel.cpp  NCCModelCreate.cpp  NCCModelImpl.h  NCCModelScore.cpp  NCCModelSearch.cpp  ShapeModel.cpp  ShapeModelCreate.cpp  ShapeModelImpl.h  ShapeModelScore.cpp  ShapeModelSearch.cpp
src/Matching/archive/: README.md  ShapeModelCreate_Legacy.cpp  ShapeModelCreate_Linemod.cpp  ShapeModelSearch_Legacy.cpp  ShapeModelSearch_Linemod.cpp
src/Measure/: Caliper.cpp  CaliperArray.cpp  Metrology.cpp
src/Morphology/: Morphology.cpp
src/Transform/: AffineTransform.cpp  Homography.cpp  PolarTransform.cpp
tests/accuracy/: ShapeModelAccuracyTest.cpp
tests/unit/matching/: test_shape_model.cpp
